# VI

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/Camera/: Environment.cpp  Environment.h  camera.hpp  perspective.cpp  perspective.hpp
src/Image/: ImagePPM.cpp  ImagePPM.hpp  image.hpp
src/Light/: AmbientLight.hpp  AreaLight.hpp  light.hpp
src/Primitive/: BB.hpp
src/Primitive/Geometry/: Triangle.hpp  geometry.hpp  mesh.cpp  mesh.hpp
src/Rays/: ray.hpp
src/Renderer/: StandardRenderer.cpp  StandardRenderer.hpp  renderer.cpp  renderer.hpp
src/Scene/: scene.cpp  scene.hpp
src/Scene/tinyobjloader/: tiny_obj_loader.h
src/Scene/tinyobjloader/.github/ISSUE_TEMPLATE/: issue-report.md
src/Scene/tinyobjloader/fuzzer/: README.md
src/Shader/: AmbientShader.cpp  AmbientShader.hpp  DistributedShader.cpp  DistributedShader.hpp  PathTracerShader.cpp  PathTracerShader.hpp  WhittedShader.cpp  WhittedShader.hpp  shader.hpp
src/images/: MyImage.ppm
src/models/: cornell_box_VI.mtl
src/utils/: RGB.hpp  vector.hpp
